--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -162,7 +162,7 @@
   }
 
   a:hover {
-    color: #125699;
+    color: #02213f;
   }
 
   .terminal {
@@ -312,7 +312,7 @@
     <div class="links">
       <a routerLink="">Home</a>
       |
-      <a routerLink="test">Test</a>
+      <a routerLink="test">Portfolio</a>
     </div>
     <div class="spacer"></div>
     <a aria-label="Twitter" target="_blank" rel="noopener" href="https://twitter.com/sirslyder" title="Twitter">
