--- a/portfolio/src/app/home/home.component.css
+++ b/portfolio/src/app/home/home.component.css
@@ -1,6 +1,7 @@
-html {
+html, body {
     height: 100%;
     background-color: black;
+    min-height: 100%;
 }
 
 .main {
@@ -32,14 +33,17 @@ html {
 }
 
 .container {
-    min-height: 100vh;
+    display: flex;
+    flex-flow: column;
+    min-height: calc(100vh - 45px);
+    margin-top: 45px;
     /* align-self: center; */
-    background-image: url("src/assets/regularSmileLarge.png");
+    background-image: url("../../assets/regularSmileLargeBlack.png");
     background-size: contain;
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 50%;
+    background-size: 100%;
     background-position-x: center;
-    background-color: rgba(0, 0, 0, 0.3);
+    /* background-color: rgb(0, 0, 0); */
 }
