--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -1,2 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-html, body { padding: 0; margin: 0; background-color: black;} 
+html, body { padding: 0; margin: 0; background-color:#135796;} 
