--- a/src/app/games/security-room/security-room.component.html
+++ b/src/app/games/security-room/security-room.component.html
@@ -2,14 +2,16 @@
     <body>
         <div class="main">
             <div class="container">
-                <h1>The Security Room</h1>
+                <h1 style = "line-height:0px;">The Security Room</h1>
                 <h2 style="line-height:0px">The only thing between you and the next living thing is a series of cameras. Use them wisely.</h2>
 
                 <h3>
-                    The Security Room is a first person horror game in which you find yourself locked in a mysterious room, the only
+                    The Security Room is a first person horror game in which you find yourself locked in a mysterious room, 
+                    <br />and the only
                     glimmer of hope is this strange facility's camera system.
                     <br /> Will it be enough to help you
                     escape the horrors that lurk ahead?
+                    <br />
                     <br />Currently in development.
                 </h3>
 
@@ -27,26 +29,15 @@
                 <div class="screenshot">
                     <div class="screenshothalf">
                         <span>
-                            Placeholder screenshot
+                            Placeholder screenshot, game's still in development after all :)
                         </span>
                     </div>
                     <div class="screenshothalf">
                         <img src="../../../assets/buddy/1.png">
                     </div>
                 </div>
-                <!-- <div class="screenshot">
-                    <div class="screenshothalf">
-                        <span>
-                            There are many endings to obtain, each with unique outcomes.
-                            <br /> Some good. Some bad.
-                        </span>
-                    </div>
-                    <div class="screenshothalf">
-                        <img src="../../../assets/buddy/2.png">
-                    </div>
-                </div> -->
 
-                <h2 style="line-height:36px">Enter, if you dare.</h2>
+                <!-- <h2 style="line-height:36px">Enter, if you dare.</h2> -->
                 <br />
 
                 <br />
