--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
 html, body { padding: 0; margin: 0; background-color:#135796;} 
+
+.screenshot {
+    width: 100%;
+    align-items: center;
+    display: flex;
+}
+
+.screenshothalf {
+    width: 50%;
+    height: 100%;
+}
+
+.screenshothalf span{
+    font-size: 24px;
+    vertical-align: middle;
+    text-align: right;
+    float: right;
+    padding-right: 25px;
+}
+
+.screenshothalf img{
+    display: block;
+    padding: 25px;
+    max-width: 32vw;
+    max-height: 18vw;
+}
+
+.screenshothalf iframe{
+    margin-left: 25px;
+    display: block;
+    width: 32vw;
+    height: 18vw;
+}
