--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -312,7 +312,7 @@
     <div class="links">
       <a routerLink="">Home</a>
       |
-      <a routerLink="games">My Games</a>
+      <a routerLink="games-list">My Games</a>
     </div>
     <div class="spacer"></div>
     <a aria-label="Twitter" target="_blank" rel="noopener" href="https://twitter.com/sirslyder" title="Twitter">
