redo landing page styling, refactor background styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,7 @@
     background-color: #1976d2;
     color: white;
     font-weight: 600;
+    z-index: 1;
   }
 
   .toolbar img {
@@ -170,7 +171,7 @@
     width: 80%;
     max-width: 600px;
     border-radius: 6px;
-    padding-top: 45px;
+    padding-top: 40px;
     margin-top: 8px;
     overflow: hidden;
     background-color: rgb(15, 15, 16);
