--- a/src/app/games/buddy/buddy.component.html
+++ b/src/app/games/buddy/buddy.component.html
@@ -1,5 +1,8 @@
 <html>
     <body>
+        <div class = "background">
+            <img src="../../../assets/buddy/buddy_blurred.png" class="width" style="opacity: 1; transform: translateY(-10%);">
+        </div>
         <div class="main">
             <div class="container">
                 <h1>Buddy</h1>
