--- a/src/app/games/security-room/security-room.component.html
+++ b/src/app/games/security-room/security-room.component.html
@@ -1,5 +1,8 @@
 <html>
     <body>
+        <div class = "background">
+            <img src="../../../assets/security-room/background_blurred.png" class="width" style="opacity: 1; transform: translateY(-20%);">
+        </div>
         <div class="main">
             <div class="container">
                 <h1 style = "line-height:0px;">The Security Room</h1>
