--- a/src/app/games/seven-favours/seven-favours.component.html
+++ b/src/app/games/seven-favours/seven-favours.component.html
@@ -1,5 +1,8 @@
 <html>
     <body>
+        <div class = "background">
+            <img src="../../../assets/sevenfavours_blurred2.png" class="width" style="opacity: 1; transform: translateY(-125px);">
+        </div>
         <div class="main">
             <div class="container">
                 <h1>Seven Favors</h1>
