--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,24 @@
 <html>
     <body>
+        <div class = "background">
+            <img src="../../assets/branding/banner_youtube.png" style="opacity: 0.2;" class="height">
+        </div>
         <div class="main">
             <div class="container">
-                <h1>Leif Kemp</h1>
-                <h3>Software Engineer and Hobbyist Game Developer</h3>
-                <br />
-                <p>Hi there! I'm Leif Kemp, and this is my own little webpage. <br />This site is currently under construction, but hopefully it'll turn out good!</p>
-                <p>Further nonsense here</p>
-                <a routerLink='test'>Link for further nonsense</a>
+                <div class="profile-picture">
+                    <img src="../../assets/branding/pfp_circular.png">
+                </div>
+                <div class="text">
+                    <h1>Leif Kemp</h1>
+                    <h3>Software Engineer and Hobbyist Game Developer</h3>
+                    <p>Hi there! I'm Leif Kemp, and this is my own little webpage. 
+                    <br />This site is currently under construction, but hopefully it'll turn out okay!
+                    </p>
+                    <a routerLink='games-list'>Here is a link to my list of games</a>
+                </div>
             </div>
-            <div class = "background">
-                
-            </div>
+            
         </div>
+        
     </body>
 </html>
