--- a/src/app/games-page/games.component.css
+++ b/src/app/games-page/games.component.css
@@ -1,9 +1,10 @@
-html {
+html, body {
     height: 100%;
     background-color: black;
 }
 
 .main {
+    position: relative;
     text-align: center;
     color: #FFFFFF;
 }
@@ -27,12 +28,8 @@ html {
     font-size: 20px;
 }
 
-.container {
-    display: flex;
-    flex-flow: column;
-    min-height: calc(100vh - 45px);
-    margin-top: 45px;
-    /* align-self: center; */
+/* .container:after{
+    content: '';
     background-image: url("../../assets/regularSmileLargeBlack.png");
     background-size: contain;
     background-position: center;
@@ -40,7 +37,16 @@ html {
     background-repeat: no-repeat;
     background-size: 100%;
     background-position-x: center;
-    background-color: rgba(0, 0, 0, 0.3);
+} */
+
+.container {
+    display: flex;
+    flex-flow: column;
+    min-height: calc(100vh - 40px);
+    margin-top: 40px;
+    /* align-self: center; */
+    
+    /* background-color: rgba(0, 0, 0, 1); */
 }
 
 .gameContainer {
