--- a/src/app/games-page/games.component.html
+++ b/src/app/games-page/games.component.html
@@ -1,5 +1,8 @@
 <html>
-    <body>
+    <body>  
+        <div class = "background">
+            <img src="../../assets/regularSmileLarge.png" class="height">
+        </div>
         <div class="main">
             <div class="container">
                 <h1>My Portfolio of Games</h1>
