--- a/src/app/games/buddy/buddy.component.css
+++ b/src/app/games/buddy/buddy.component.css
@@ -7,6 +7,7 @@ html, body {
 .main {
     text-align: center;
     color: #FFFFFF;
+    position: relative;
 }
 
 .main h1{
@@ -36,18 +37,8 @@ html, body {
 .container {
     display: flex;
     flex-flow: column;
-    min-height: calc(100vh - 45px);
-    margin-top: 45px;
-    /* min-height: 100vh; */
-    /* align-self: center; */
-    background-image: url("../../../assets/buddy/buddy_blurred.png");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    /* background-size: 100%; */
-    background-position-x: center;
-    background-color: #383838;
+    min-height: calc(100vh - 40px);
+    margin-top: 40px;
 }
 
 .main a {
