--- a/src/app/games/seven-favours/seven-favours.component.css
+++ b/src/app/games/seven-favours/seven-favours.component.css
@@ -5,6 +5,7 @@ html, body {
 }
 
 .main {
+    position: relative;
     text-align: center;
     color: #FFFFFF;
 }
@@ -36,18 +37,18 @@ html, body {
 .container {
     display: flex;
     flex-flow: column;
-    min-height: calc(100vh - 45px);
-    margin-top: 45px;
+    min-height: calc(100vh - 40px);
+    margin-top: 40px;
     /* min-height: 100vh; */
     /* align-self: center; */
-    background-image: url("../../../assets/sevenfavours_blurred2.png");
+    /* background-image: url("../../../assets/sevenfavours_blurred2.png");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat; */
     /* background-size: 100%; */
-    background-position-x: center;
-    background-color: #FF0002;
+    /* background-position-x: center;
+    background-color: #FF0002; */
 }
 
 .main a {
