--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,24 +5,22 @@ html, body {
 }
 
 .main {
-    text-align: center;
     color: #FFFFFF;
+    position: relative;
 }
 
 .main h1{
-    text-align: center;
-    font-size: 72px;
+    font-size: 3vw;
     color:#FFFFFF;
+    line-height: 0.2vw;
 }
 
 .main h3{
-    text-align: center;
-    font-size: 24px;
+    font-size: 2vw;
     color:#FFFFFF;
 }
 
 .main p{
-    text-align: center;
     color: #FFFFFF;
     font-size: 20px;
 }
@@ -33,17 +31,31 @@ html, body {
 }
 
 .container {
+    width: 100%;
+    flex-flow: row;
+    justify-content: center;
     display: flex;
-    flex-flow: column;
-    min-height: calc(100vh - 45px);
-    margin-top: 45px;
-    /* align-self: center; */
-    background-image: url("../../assets/regularSmileLargeBlack.png");
-    background-size: contain;
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position-x: center;
-    /* background-color: rgb(0, 0, 0); */
+    min-height: calc(100vh - 40px);
+    margin-top: 40px;
+}
+
+.profile-picture {
+    width: 50%;
+    height: 100%;
+    margin: auto;
+    align-items: center;
+}
+.profile-picture img{
+    width: 25vw;
+    height: 25vw;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.text {
+    width: 50%;
+    margin: auto;
+    text-align: left;
 }
