--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
-html, body { padding: 0; margin: 0; background-color:#135796;} 
+html, body { padding: 0; margin: 0;} 
+
+.background {
+    position: fixed;
+    width: 100%;
+    height: calc(100%);
+    overflow: hidden;
+    margin-top: -40px;
+}
+
+.background .height{
+    display: block;
+    width: auto;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0.3;
+}
+
+.background .width{
+    display: block;
+    width: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0.3;
+}
 
 .screenshot {
     width: 100%;
