titles and slightly more text for landing page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,10 @@
                     <p>Hi there! I'm Leif Kemp, and this is my own little webpage. 
                     <br />This site is currently under construction, but hopefully it'll turn out okay!
                     </p>
-                    <a routerLink='games-list'>Here is a link to my list of games</a>
+                    <br />
+                    <p>On this website you can find a list of all of my games, new, old and upcoming.
+                        <br /> As well as any other projects I've taken part in.
+                    </p>
                 </div>
             </div>
             
