adjust asset links

--- a/src/app/games/buddy/buddy.component.html
+++ b/src/app/games/buddy/buddy.component.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div class = "background">
-            <img src="../../../assets/buddy/buddy_blurred.png" class="width" style="opacity: 1; transform: translateY(-10%);">
+            <img src="assets/buddy/buddy_blurred.png" class="width" style="opacity: 1; transform: translateY(-10%);">
         </div>
         <div class="main">
             <div class="container">
@@ -31,7 +31,7 @@
                         </span>
                     </div>
                     <div class="screenshothalf">
-                        <img src="../../../assets/buddy/1.png">
+                        <img src="assets/buddy/1.png">
                     </div>
                 </div>
                 <div class="screenshot">
@@ -42,7 +42,7 @@
                         </span>
                     </div>
                     <div class="screenshothalf">
-                        <img src="../../../assets/buddy/2.png">
+                        <img src="assets/buddy/2.png">
                     </div>
                 </div>
 
