--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
 <html>
     <body>
         <div class = "background">
-            <img src="../../assets/branding/banner_youtube.png" style="opacity: 0.2;" class="height">
+            <img src="assets/branding/banner_youtube.png" style="opacity: 0.2;" class="height">
         </div>
         <div class="main">
             <div class="container">
                 <div class="profile-picture">
-                    <img src="../../assets/branding/pfp_circular.png">
+                    <img src="assets/branding/pfp_circular.png">
                 </div>
                 <div class="text">
                     <h1>Leif Kemp</h1>
