adjust src link for all images

--- a/src/app/games-page/games.component.html
+++ b/src/app/games-page/games.component.html
@@ -1,7 +1,7 @@
 <html>
     <body>  
         <div class = "background">
-            <img src="../../assets/regularSmileLarge.png" class="height">
+            <img src="assets/regularSmileLarge.png" class="height">
         </div>
         <div class="main">
             <div class="container">
@@ -11,15 +11,15 @@
 
                 <br />
                 <div class = "gameContainer">
-                    <img src = "../../assets/security-room/button_text.png" (click)="goToLink('/games/security-room')">
+                    <img src = "assets/security-room/button_text.png" (click)="goToLink('/games/security-room')">
                 </div>
 
                 <div class = "gameContainer">
-                    <img src = "../../assets/seven-favours/button_text.png" (click)="goToLink('/games/seven-favours')">
+                    <img src = "assets/seven-favours/button_text.png" (click)="goToLink('/games/seven-favours')">
                 </div>
 
                 <div class = "gameContainer">
-                    <img src = "../../assets/buddy/button_text.png" (click)="goToLink('/games/buddy')">
+                    <img src = "assets/buddy/button_text.png" (click)="goToLink('/games/buddy')">
                 </div>
             </div> 
         </div>
