--- a/src/app/games/security-room/security-room.component.html
+++ b/src/app/games/security-room/security-room.component.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div class = "background">
-            <img src="../../../assets/security-room/background_blurred.png" class="width" style="opacity: 1; transform: translateY(-20%);">
+            <img src="assets/security-room/background_blurred.png" class="width" style="opacity: 1; transform: translateY(-20%);">
         </div>
         <div class="main">
             <div class="container">
@@ -36,7 +36,7 @@
                         </span>
                     </div>
                     <div class="screenshothalf">
-                        <img src="../../../assets/buddy/1.png">
+                        <img src="assets/buddy/1.png">
                     </div>
                 </div>
 
