--- a/src/app/games/seven-favours/seven-favours.component.html
+++ b/src/app/games/seven-favours/seven-favours.component.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div class = "background">
-            <img src="../../../assets/sevenfavours_blurred2.png" class="width" style="opacity: 1; transform: translateY(-125px);">
+            <img src="assets/sevenfavours_blurred2.png" class="width" style="opacity: 1; transform: translateY(-125px);">
         </div>
         <div class="main">
             <div class="container">
@@ -36,7 +36,7 @@
                         </span>
                     </div>
                     <div class="screenshothalf">
-                        <img src="../../../assets/seven-favours/2.png">
+                        <img src="assets/seven-favours/2.png">
                     </div>
                 </div>
                 <div class="screenshot">
@@ -48,7 +48,7 @@
                         </span>
                     </div>
                     <div class="screenshothalf">
-                        <img src="../../../assets/seven-favours/4.png">
+                        <img src="assets/seven-favours/4.png">
                     </div>
                 </div>
 
