adjust home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,10 @@
                     <p>On this website you can find a list of all of my games, new, old and upcoming.
                         <br /> As well as any other projects I've taken part in.
                     </p>
+
+                    <p>
+                        I'm currently trying to automate the deployment of this page, hopefully it works!
+                    </p>
                 </div>
             </div>
             
