cyberblaze, slaughter lands, games page now has a timeline

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -314,6 +314,8 @@
       <a routerLink="">Home</a>
       |
       <a routerLink="games-list">My Games</a>
+      |
+      <a routerLink="sandbox">Sandbox</a>
     </div>
     <div class="spacer"></div>
     <a aria-label="Twitter" target="_blank" rel="noopener" href="https://twitter.com/sirslyder" title="Twitter">
