--- a/src/app/games-page/games.component.html
+++ b/src/app/games-page/games.component.html
@@ -11,15 +11,33 @@
 
                 <br />
                 <div class = "gameContainer">
+                    <p>In Development</p>
                     <img src = "assets/security-room/button_text.png" (click)="goToLink('/games/security-room')">
+                    <div class="vertical-line"></div>
                 </div>
 
                 <div class = "gameContainer">
+                    <p>2023</p>
                     <img src = "assets/seven-favours/button_text.png" (click)="goToLink('/games/seven-favours')">
+                    <div class="vertical-line"></div>
                 </div>
 
                 <div class = "gameContainer">
+                    <p>2020</p>
+                    <img src = "assets/cyberblaze/button_text.png" (click)="goToLink('/games/cyberblaze')">
+                    <div class="vertical-line"></div>
+                </div>
+
+                <div class = "gameContainer">
+                    <p>2019</p>
                     <img src = "assets/buddy/button_text.png" (click)="goToLink('/games/buddy')">
+                    <div class="vertical-line"></div>
+                </div>
+
+                <div class = "gameContainer">
+                    <p>2016</p>
+                    <img src = "assets/slaughter-lands/button_text.png" (click)="goToLink('/games/slaughter-lands')">
+                    <!-- <div class="vertical-line"></div> -->
                 </div>
             </div> 
         </div>
