--- a/src/app/games-page/games.component.css
+++ b/src/app/games-page/games.component.css
@@ -14,6 +14,7 @@ html, body {
     font-size: 72px;
     color:#FFFFFF;
     line-height: 0;
+    padding-bottom: 50px;
 }
 
 .main h3{
@@ -53,6 +54,9 @@ html, body {
     position: relative;
     color: white;
     padding: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .gameContainer img {
@@ -60,9 +64,22 @@ html, body {
     max-height: 5vw;
     transition: all 0.25s;
     border-radius: 5px;
+    padding-left: 50px;
+}
+
+.gameContainer p {
+    width: 10vw;
+    font-size: 24px;
 }
 
 .gameContainer img:hover{
     transform: scale(1.1, 1.1);
     transition: all 0.25s;
+}
+
+.vertical-line {
+    border-left: 5px solid white;
+    height: calc(5vw - 12px);
+    position: absolute;
+    transform: translate(calc(-15vw - 25px), calc(5vh + 15px));
 }
