fumbling wizard, favicon

--- a/src/app/games-page/games.component.html
+++ b/src/app/games-page/games.component.html
@@ -23,6 +23,12 @@
                 </div>
 
                 <div class = "gameContainer">
+                    <p>2022</p>
+                    <img src = "assets/fumbling-wizard/button_text.png" (click)="goToLink('/games/fumbling-wizard')">
+                    <div class="vertical-line"></div>
+                </div>
+
+                <div class = "gameContainer">
                     <p>2020</p>
                     <img src = "assets/cyberblaze/button_text.png" (click)="goToLink('/games/cyberblaze')">
                     <div class="vertical-line"></div>
