--- a/src/app/games-page/games.component.html
+++ b/src/app/games-page/games.component.html
@@ -29,6 +29,12 @@
                 </div>
 
                 <div class = "gameContainer">
+                    <p>2021</p>
+                    <img src = "assets/goobers/button_text.png" (click)="goToLink('/games/goobers')">
+                    <div class="vertical-line"></div>
+                </div>
+
+                <div class = "gameContainer">
                     <p>2020</p>
                     <img src = "assets/cyberblaze/button_text.png" (click)="goToLink('/games/cyberblaze')">
                     <div class="vertical-line"></div>
