--- a/src/app/blogs-page/blogs.component.css
+++ b/src/app/blogs-page/blogs.component.css
@@ -68,12 +68,28 @@ html, body {
     margin-left: 50px;
 }
 
+.gameContainer a {
+    width: 30vw;
+    max-width: 30vw;
+    height: 5vw;
+    max-height: 5vw;
+    transition: all 0.25s;
+    line-height: 5vw;
+    border-radius: 5px;
+    margin-left: 50px;
+    font-size: 24px;
+    background-color: white;
+    text-align: center;
+    align-items: center;
+}
+
+
 .gameContainer p {
     width: 10vw;
     font-size: 24px;
 }
 
-.gameContainer img:hover{
+.gameContainer a:hover{
     transform: scale(1.1, 1.1);
     transition: all 0.25s;
 }
