whole lotta blogs baby

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -316,6 +316,8 @@
       <a routerLink="games-list">My Games</a>
       |
       <a routerLink="sandbox">Sandbox</a>
+      |
+      <a routerLink="blogs">Blog</a>
     </div>
     <div class="spacer"></div>
     <a aria-label="Twitter" target="_blank" rel="noopener" href="https://twitter.com/sirslyder" title="Twitter">
