--- a/src/app/blogs-page/blogs.component.css
+++ b/src/app/blogs-page/blogs.component.css
@@ -50,7 +50,11 @@ html, body {
     /* background-color: rgba(0, 0, 0, 1); */
 }
 
-.gameContainer {
+li {
+    list-style-type: none;
+}
+
+.blogContainer {
     position: relative;
     color: white;
     padding: 12px;
@@ -59,7 +63,7 @@ html, body {
     justify-content: center;
 }
 
-.gameContainer img {
+.blogContainer img {
     max-width: 30vw;
     max-height: 5vw;
     transition: all 0.25s;
@@ -68,30 +72,34 @@ html, body {
     margin-left: 50px;
 }
 
-.gameContainer a {
+.blogContainer a {
     width: 30vw;
     max-width: 30vw;
     height: 5vw;
     max-height: 5vw;
     transition: all 0.25s;
-    line-height: 5vw;
+    line-height: 2.5vw;
     border-radius: 5px;
     margin-left: 50px;
     font-size: 24px;
-    background-color: white;
-    text-align: center;
-    align-items: center;
+    background-color: #32597A;
+    font-weight: bold;
+    color: #000000;
+    overflow: break-word;
+    word-break: break-word;
+    white-space: pre-line;
 }
 
 
-.gameContainer p {
+.blogContainer p {
     width: 10vw;
     font-size: 24px;
 }
 
-.gameContainer a:hover{
+.blogContainer a:hover{
     transform: scale(1.1, 1.1);
     transition: all 0.25s;
+    background-color: #C4E4FF;
 }
 
 .vertical-line {
