--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,8 @@
     color: white;
     font-weight: 600;
     z-index: 1;
-    width: 100vw;
+    /* width: 100vw; */
+    /* overflow-x: hidden; */
   }
 
   .toolbar img {
@@ -268,7 +269,7 @@
   .links {
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 50vw;
     transform: translate(-50%, -50%);
     height: 100%;
     align-items: center;
@@ -393,19 +394,19 @@
       <div class="dropdown">
         <a routerLink="games-list" class="dropbtn">My Games</a>
         <div class="dropdown-content">
-          <a href="/games/security-room">The Security Room</a>
-          <a href="/games/seven-favours">Seven Favours</a>
-          <a href="/games/fumbling-wizard">The Fumbling Wizard</a>
-          <a href="/games/goobers">Goobers</a>
-          <a href="/games/cyberblaze">Cyberblaze</a>
-          <a href="/games/buddy">Goobers</a>
-          <a href="/games/slaughter-lands">Slaughter Lands</a>
+          <a href="games/security-room">The Security Room</a>
+          <a href="games/seven-favours">Seven Favours</a>
+          <a href="games/fumbling-wizard">The Fumbling Wizard</a>
+          <a href="games/goobers">Goobers</a>
+          <a href="games/cyberblaze">Cyberblaze</a>
+          <a href="games/buddy">Goobers</a>
+          <a href="games/slaughter-lands">Slaughter Lands</a>
         </div>
       </div>
       <a class="link" routerLink="sandbox">Sandbox</a>
       <a class="link" routerLink="blogs">Blog</a>
     </div>
-    <!-- <div class="spacer"></div>
+    <div class="spacer"></div>
     <a aria-label="Twitter" target="_blank" rel="noopener" href="https://twitter.com/sirslyder" title="Twitter">
       <svg id="twitter-logo" height="24" data-name="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
         <rect width="400" height="400" fill="none"/>
@@ -417,7 +418,7 @@
         <path d="M0 0h24v24H0V0z" fill="none"/>
         <path d="M21.58 7.19c-.23-.86-.91-1.54-1.77-1.77C18.25 5 12 5 12 5s-6.25 0-7.81.42c-.86.23-1.54.91-1.77 1.77C2 8.75 2 12 2 12s0 3.25.42 4.81c.23.86.91 1.54 1.77 1.77C5.75 19 12 19 12 19s6.25 0 7.81-.42c.86-.23 1.54-.91 1.77-1.77C22 15.25 22 12 22 12s0-3.25-.42-4.81zM10 15V9l5.2 3-5.2 3z"/>
       </svg>
-    </a> -->
+    </a>
 </div>
 
 
