fix typos, add certifications page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -269,8 +269,8 @@
   .links {
     position: absolute;
     top: 50%;
-    left: 50vw;
-    transform: translate(-50%, -50%);
+    left: 40vw;
+    transform: translate(-40%, -50%);
     height: 100%;
     align-items: center;
   }
@@ -399,10 +399,11 @@
           <a href="games/fumbling-wizard">The Fumbling Wizard</a>
           <a href="games/goobers">Goobers</a>
           <a href="games/cyberblaze">Cyberblaze</a>
-          <a href="games/buddy">Goobers</a>
+          <a href="games/buddy">Buddy</a>
           <a href="games/slaughter-lands">Slaughter Lands</a>
         </div>
       </div>
+      <a class="link" routerLink="certifications">Certifications</a>
       <a class="link" routerLink="sandbox">Sandbox</a>
       <a class="link" routerLink="blogs">Blog</a>
     </div>
