--- a/src/app/games/goobers/goobers.component.html
+++ b/src/app/games/goobers/goobers.component.html
@@ -6,7 +6,7 @@
         <div class="main">
             <div class="container">
                 <h1>Goobers</h1>
-                <h2 style="line-height:0px">Defend the data stream!</h2>
+                <h2 style="line-height:0px">Stronger together!</h2>
 
                 <h3>
                     Goobers is a 2D puzzle platformer developed for the Brackeys 2021.1 Jam by myself and Esther Holt.
