--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,17 +10,14 @@
                 </div>
                 <div class="text">
                     <h1>Leif Kemp</h1>
-                    <h3>Software Engineer and Hobbyist Game Developer</h3>
-                    <p>Hi there! I'm Leif Kemp, and this is my own little webpage. 
-                    <br />This site is currently under construction, but hopefully it'll turn out okay!
+                    <h3>Software & Data Engineer<br>Hobbyist Game Developer</h3>
+                    <p>Hi there! I'm Leif Kemp, and welcome to my portfolio! 
+                    <br />This portfolio website is built in Angular and was developed during the downtime in my placement year.
+                    <br />I've been chipping away at it here and there when I get the time.
                     </p>
                     <br />
                     <p>On this website you can find a list of all of my games, new, old and upcoming.
-                        <br /> As well as any other projects I've taken part in.
-                    </p>
-                    <br />
-                    <p>
-                        I'm currently trying to automate the deployment of this page, hopefully it works!
+                        <br /> You can also find the certifications I have obtained, as well as some experiments I've done for this site;<br>a custom blog.
                     </p>
                 </div>
             </div>
