--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -16,26 +16,26 @@
                     <h3>Databricks</h3>
                     <div class="cert">
                         <p>Databricks Certified Associate Developer for Apache Spark 3.0</p>
-                        <a href="https://credentials.databricks.com/5d70c7b3-6c20-4240-8250-52b665d0e65d" target="_blank">Link</a>
+                        <a href="https://credentials.databricks.com/5d70c7b3-6c20-4240-8250-52b665d0e65d" target="_blank">Link To Certification</a>
                     </div>
                     <div class="cert">
                         <p>Databricks Certified Data Engineer Associate</p>
-                        <a href="https://credentials.databricks.com/e1f7d3d3-92d5-4b3c-be62-1989f3f344e1" target="_blank">Link</a>
+                        <a href="https://credentials.databricks.com/e1f7d3d3-92d5-4b3c-be62-1989f3f344e1" target="_blank">Link To Certification</a>
                     </div>
                     <div class="cert">
                         <p>Generative AI Fundamentals</p>
-                        <a href="https://credentials.databricks.com/92cf5d41-1552-4f7d-996d-8318ca9d9ee1" target="_blank">Link</a>
+                        <a href="https://credentials.databricks.com/92cf5d41-1552-4f7d-996d-8318ca9d9ee1" target="_blank">Link To Certification</a>
                     </div>
                     <div class="cert">
                         <p>Databricks Lakehouse Fundamentals</p>
-                        <a href="https://credentials.databricks.com/9db22a50-11bc-4148-ba12-29762ddf32a2" target="_blank">Link</a>
+                        <a href="https://credentials.databricks.com/9db22a50-11bc-4148-ba12-29762ddf32a2" target="_blank">Link To Certification</a>
                     </div>
                     
                     <br>
                     <h3>Microsoft</h3>
                     <div class="cert">
                         <p>DP-900: Azure Data Fundamentals</p>
-                        <a href="https://learn.microsoft.com/api/credentials/share/en-us/LeifKemp-3125/1622645C0AC52E54?sharingId=B26DC027246FCE47" target="_blank">Link</a>
+                        <a href="https://learn.microsoft.com/api/credentials/share/en-us/LeifKemp-3125/1622645C0AC52E54?sharingId=B26DC027246FCE47" target="_blank">Link To Certification</a>
                     </div>
                 </div>
             </div>
