privacy policy for buddy android

--- a/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
+++ b/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
@@ -5,15 +5,30 @@
         </div>
         <div class="main">
             <div class="container">
-                <h1>Buddy</h1>
-                <h2 style="line-height:0px">Can you escape?</h2>
+                <h2>Buddy - Android Privacy Policy</h2>
 
-                <h3>
+                <!-- <h3>
                     Buddy is a short point and click horror game in which you must escape from a room controlled by the eponymous Buddy.
                     <br />Will you make out before he catches you?
-                </h3>
+                </h3> -->
+                <div class="textchunk">
+                    <span style="font-size: 24px">This privacy policy is designed to help you understand how data may be collected from your interactions with the
+                        Android port of the game "Buddy", hosted on Google Play.
+                    </span>
 
-                <div class="screenshot">
+                    <h3>What data will be collected?</h3>
+                    <span>No data is collected under any circumstances from playing the game.</span>
+
+                    <br/>
+                    <br/>
+
+                    <p style="line-height: 4px;">
+                        <a href="games/buddy">Return to Buddy Page</a>
+                    </p>
+                </div>
+                
+
+                <!-- <div class="screenshot">
                     <div class="screenshothalf">
                         <span>
                             You must use your wits and the tools available to you to escape from Buddy's room.
@@ -59,13 +74,8 @@
 
                 <p style="line-height: 4px;">Buddy - Released January 2020</p>
                 <p style="line-height: 4px;">Genre - Point and Click, Horror</p>
-                <p style="line-height: 4px;">Engine - Unity</p>
-                <p style="line-height: 4px;">
-                    <a href="privacy/buddy">Android Privacy Policy</a>
-                </p>
+                <p style="line-height: 4px;">Engine - Unity</p> -->
             </div>
         </div>
     </body>
 </html>
-
-<router-outlet></router-outlet>
