--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,24 @@ html, body { padding: 0; margin: 0;}
     opacity: 0.3;
 }
 
+.textchunk {
+    /* align-items: left; */
+    width: 50%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: column;
+}
+
+.textchunk span{
+    text-align: left;
+    justify-content: left;
+    width: 100%;
+    font-size: 24px;
+}
+
 .screenshot {
     width: 100%;
     align-items: center;
