updated privacy policy

--- a/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
+++ b/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
@@ -17,7 +17,28 @@
                     </span>
 
                     <h3>What data will be collected?</h3>
-                    <span>No data is collected under any circumstances from playing the game.</span>
+                    <span>No data is collected under any circumstances from playing the game. There is no means for the game to
+                        collect data through play, it does not communicate with anything that requires transferral of data. It is an entirely offline experience.
+                        <br><br>The game does not contain any advertising material, and thus, there are no advertising companies attached to the game that collect
+                        analytical data.
+                        <br><br>Contact information may be obtained and retained when you, the user, reach out to me at my support email.
+                    </span>
+
+                    <h3>Why will this data be collected?</h3>
+                    <span>Contact information will be collected and utilised for the following:
+                        <br>- To support you as the user with the game
+                        <br>- For further contact regarding support or game issues
+                    </span>
+
+                    <h3>Safeguarding</h3>
+                    <span>Any information that is collected is generally not retained for any longer than is necessary. When data is retained, it will be kept confidential.
+                        I will not share any of your data with third parties or sell your data. Data may be disclosed if required by law.
+                    </span>
+
+                    <h3>Contact</h3>
+                    <span>If you wish to get in contact with me for support purposes, have any questions, or want to opt-out of having contact information retained, you can contact me at
+                        leif.unity3dbusiness@gmail.com
+                    </span>
 
                     <br/>
                     <br/>
