--- a/src/styles.css
+++ b/src/styles.css
@@ -77,3 +77,9 @@ html, body { padding: 0; margin: 0;}
     width: 32vw;
     height: 18vw;
 }
+
+@media screen and (max-width: 1000px) {
+    .textchunk {
+        width: 80%;
+    }
+  }
