--- a/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
+++ b/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
@@ -37,7 +37,7 @@
 
                     <h3>Contact</h3>
                     <span>If you wish to get in contact with me for support purposes, have any questions, or want to opt-out of having contact information retained, you can contact me at
-                        leif.unity3dbusiness@gmail.com
+                        leif.unity3dbusiness&#64;gmail.com
                     </span>
 
                     <br/>
